[package]
name = "curl-impersonate"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "1.6"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
